--- a/src/components/chrome/ProgressBar.module.css
+++ b/src/components/chrome/ProgressBar.module.css
@@ -1,6 +1,6 @@
 .track {
   position: fixed;
-  top: 0;
+  top: env(safe-area-inset-top, 0px);
   left: 0;
   right: 0;
   height: 3px;
